# pyproject

./: .gitignore  pyproject.toml  setup.py
pyproject/: props.py  settings.py  utils.py
pyproject/cli/: app.py  shell.py  utils.py
pyproject/models/: base.py  errors.py  mixins.py  model.py  props.py  utils.py
tests/: conftest.py  test_props.py
tests/models/: conftest.py  test_model.py
